Did Lesson 4 Practice

--- a/lessons/sem_01/lesson_04/practice.ipynb
+++ b/lessons/sem_01/lesson_04/practice.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,17 +73,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import copy\n",
+    "\n",
     "class PersonDB:\n",
     "    _database: dict[UUID, Person]\n",
     "    _login_registry: dict[str, str]\n",
+    "    PASSWORD_LENGTH: int\n",
     "\n",
     "    def __init__(self) -> None:\n",
     "        \"\"\"Инициализирует базу данных.\"\"\"\n",
-    "        # ваш код\n",
+    "        self._database = dict()\n",
+    "        self._login_registry = dict()\n",
+    "        self.PASSWORD_LENGTH = 10\n",
+    "\n",
+    "    def is_valid(self, string: str, type: str) -> bool:\n",
+    "\n",
+    "        if (len(string) < self.PASSWORD_LENGTH and type == \"password\") or (string == \"\"):\n",
+    "            return False\n",
+    "        \n",
+    "        if type == 'login':\n",
+    "            return string.isalnum()\n",
+    "        \n",
+    "        upper_case = False\n",
+    "        lower_case = False\n",
+    "        is_here_num = False\n",
+    "        valid_symbols = False\n",
+    "\n",
+    "        for char in string:\n",
+    "            if char.isalnum():\n",
+    "                valid_symbols = True\n",
+    "            if char.islower():\n",
+    "                lower_case = True\n",
+    "            if char.isupper():\n",
+    "                upper_case = True\n",
+    "            if char in \"0123456789\":\n",
+    "                is_here_num = True\n",
+    "                \n",
+    "        return bool(upper_case*lower_case*is_here_num*valid_symbols)\n",
+    "\n",
     "\n",
     "    def create_person(self, person: Person) -> UUID:\n",
     "        \"\"\"\n",
@@ -98,7 +129,28 @@
     "        Raises:\n",
     "            ValueError, если логин или пароль не удовлетворяют требованиям.\n",
     "        \"\"\"\n",
-    "        # ваш код\n",
+    "        \n",
+    "        # Check is valid login and password\n",
+    "        if (not self.is_valid(person.password, type=\"password\")) or (not self.is_valid(person.login, type=\"login\")):\n",
+    "            raise ValueError\n",
+    "        \n",
+    "        # Check is login unique\n",
+    "        if person.login in self._login_registry.keys():\n",
+    "            raise ValueError\n",
+    "        \n",
+    "        # Generate UUID\n",
+    "        uuid = uuid4()\n",
+    "\n",
+    "        # Get copy of person to save it in DB\n",
+    "        person_copy = copy.copy(person)\n",
+    "\n",
+    "        # Create person\n",
+    "        self._database[uuid] = person_copy\n",
+    "        self._login_registry[person.login] = person.login\n",
+    "\n",
+    "        return uuid\n",
+    "\n",
+    "        \n",
     "    \n",
     "    def read_person_info(self, person_id: UUID) -> Person:\n",
     "        \"\"\"\n",
@@ -113,7 +165,12 @@
     "        Raises:\n",
     "            KeyError, если в базе данных нет пользователя с person_id.\n",
     "        \"\"\"\n",
-    "        # ваш код\n",
+    "\n",
+    "        if (person := self._database[person_id]) is None:\n",
+    "            raise KeyError(f\"There is no person with ID: {person_id}\")\n",
+    "        \n",
+    "        return person\n",
+    "\n",
     "    \n",
     "    def update_person_info(self, person_id: UUID, person_info_new: Person) -> None:\n",
     "        \"\"\"\n",
@@ -130,7 +187,30 @@
     "                не прошли этап валидации.\n",
     "            KeyError, если в базе данных нет пользователя с person_id.\n",
     "        \"\"\"\n",
-    "        # ваш код\n",
+    "        if (person := self._database[person_id]) is None:\n",
+    "            raise KeyError(f\"There is no person with ID: {person_id}\")\n",
+    "        \n",
+    "        if person_info_new.login in self._login_registry:\n",
+    "            raise ValueError(\"Login is already in use\")\n",
+    "        \n",
+    "        for element in person_info_new.__dict__.keys():\n",
+    "            if person_info_new.__dict__[element] != '':\n",
+    "                match element:\n",
+    "                    case 'login':\n",
+    "                        if not self.is_valid(person_info_new.login, type=\"login\"):\n",
+    "                            raise ValueError\n",
+    "                        self._login_registry.pop(person.login)\n",
+    "                        person.login = person_info_new.login\n",
+    "                        self._login_registry[person.login] = person.login\n",
+    "                    case 'password':\n",
+    "                        if not self.is_valid(person_info_new.password, type=\"password\"):\n",
+    "                            raise ValueError\n",
+    "                        person.password = person_info_new.password\n",
+    "                    case 'username':\n",
+    "                        person.username = person_info_new.username\n",
+    "                    case 'metadata':\n",
+    "                        person.metadata = person_info_new.metadata\n",
+    "                \n",
     "    \n",
     "    def delete_person(self, person_id: UUID) -> None:\n",
     "        \"\"\"\n",
@@ -142,7 +222,10 @@
     "        Raises:\n",
     "            KeyError, если в базе данных нет пользователя с person_id.\n",
     "        \"\"\"\n",
-    "        # ваш код"
+    "        if (person := self._database.pop(person_id, None)) is None:\n",
+    "            raise KeyError(f\"There is no person with ID: {person_id}\")\n",
+    "        \n",
+    "        self._login_registry.pop(person.login) # Delete login"
    ]
   },
   {
@@ -156,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,15 +340,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Login is already in use",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[43], line 27\u001b[0m\n\u001b[0;32m     14\u001b[0m person2_updated \u001b[38;5;241m=\u001b[39m Person(\n\u001b[0;32m     15\u001b[0m     password\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mabcDEF123456\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     16\u001b[0m     login\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlogin1\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     17\u001b[0m     username\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muser#2\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     18\u001b[0m     metadata\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m123123123\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     19\u001b[0m )\n\u001b[0;32m     20\u001b[0m person2_update \u001b[38;5;241m=\u001b[39m Person(\n\u001b[0;32m     21\u001b[0m     password\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mabcDEF123456\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     22\u001b[0m     login\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlogin1\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     23\u001b[0m     username\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     24\u001b[0m     metadata\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m123123123\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     25\u001b[0m )\n\u001b[1;32m---> 27\u001b[0m \u001b[43mdatabase\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupdate_person_info\u001b[49m\u001b[43m(\u001b[49m\u001b[43mperson2_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mperson2_update\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(database\u001b[38;5;241m.\u001b[39m_database) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[0;32m     29\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(database\u001b[38;5;241m.\u001b[39m_login_registry) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m2\u001b[39m\n",
+      "Cell \u001b[1;32mIn[40], line 115\u001b[0m, in \u001b[0;36mPersonDB.update_person_info\u001b[1;34m(self, person_id, person_info_new)\u001b[0m\n\u001b[0;32m    112\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThere is no person with ID: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mperson_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    114\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m person_info_new\u001b[38;5;241m.\u001b[39mlogin \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_login_registry:\n\u001b[1;32m--> 115\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLogin is already in use\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    117\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m element \u001b[38;5;129;01min\u001b[39;00m person_info_new\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__dict__\u001b[39m\u001b[38;5;241m.\u001b[39mkeys():\n\u001b[0;32m    118\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m person_info_new\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__dict__\u001b[39m[element] \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m:\n",
+      "\u001b[1;31mValueError\u001b[0m: Login is already in use"
+     ]
+    }
+   ],
    "source": [
     "person2 = Person(\n",
     "    password=\"AaBbcC1234Dd\",\n",
-    "    login=\"login2\",\n",
+    "    login=\"sdad\",\n",
     "    username=\"user#2\"\n",
     ")\n",
+    "\n",
     "person2_id = database.create_person(person2)\n",
     "assert len(database._database) == 2\n",
     "assert len(database._login_registry) == 2\n",
@@ -275,13 +372,15 @@
     "\n",
     "person2_updated = Person(\n",
     "    password=\"abcDEF123456\",\n",
-    "    login=\"LOGIN2\",\n",
+    "    login=\"login23\",\n",
     "    username=\"user#2\",\n",
+    "    metadata=\"123123123\"\n",
     ")\n",
     "person2_update = Person(\n",
     "    password=\"abcDEF123456\",\n",
-    "    login=\"LOGIN2\",\n",
+    "    login=\"login23\",\n",
     "    username=\"\",\n",
+    "    metadata=\"123123123\"\n",
     ")\n",
     "\n",
     "database.update_person_info(person2_id, person2_update)\n",
@@ -290,7 +389,10 @@
     "assert person2_id in database._database\n",
     "assert person2.login not in database._login_registry\n",
     "assert person2_updated.login in database._login_registry\n",
-    "assert database._database[person2_id] == person2_updated"
+    "assert database._database[person2_id] == person2_updated\n",
+    "\n",
+    "print(database._database)\n",
+    "print(database._login_registry)"
    ]
   },
   {
@@ -302,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
