--- a/lessons/sem_01/lesson_06/practice.ipynb
+++ b/lessons/sem_01/lesson_06/practice.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,25 +305,47 @@
     "    APPEND = \"a\"\n",
     "    REWRITE = \"w\"\n",
     "\n",
-    "\n",
     "class FileOut:\n",
+    "    _path_to_file: str\n",
+    "    _mode: str\n",
+    "\n",
     "    def __init__(\n",
     "        self,\n",
     "        path_to_file: str,\n",
     "        mode: Union[str, FileOutModes] = FileOutModes.REWRITE,\n",
     "    ) -> None:\n",
-    "        # ваш код\n",
-    "        pass\n",
+    "\n",
+    "        if isinstance(mode, FileOutModes):\n",
+    "            self._mode = mode.value\n",
+    "        else:\n",
+    "            raise ValueError(\"Invalid mode.\")\n",
+    "    \n",
+    "        self.path_to_file = path_to_file\n",
+    "\n",
+    "    def __enter__(self):\n",
+    "        self.file = open(self.path_to_file, mode=str(self._mode))\n",
+    "        self.stdout = sys.stdout\n",
+    "        sys.stdout = self.file\n",
+    "        return self\n",
+    "\n",
+    "    def __exit__(self, exc_type, exc_val, exc_tb) -> None:\n",
+    "        sys.stdout = self.stdout\n",
+    "        self.file.close()\n",
+    "        if exc_type:\n",
+    "            raise\n",
     "\n",
     "    @property\n",
     "    def mode(self) -> FileOutModes:\n",
-    "        # ваш код\n",
-    "        pass\n",
+    "        return self._mode\n",
     "\n",
     "    @mode.setter\n",
     "    def mode(self, mode_new: Union[str, FileOutModes]) -> None:\n",
-    "        # ваш код\n",
-    "        pass"
+    "        if isinstance(mode_new, FileOutModes):\n",
+    "            self._mode = mode_new.value\n",
+    "        elif isinstance(mode_new, str) and mode_new in (\"a\", \"w\"):\n",
+    "            self._mode = mode_new\n",
+    "        else:\n",
+    "            raise ValueError(\"Invalid mode. Should be 'r' or 'w'.\")"
    ]
   },
   {
@@ -335,9 +357,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text must be printed into stdout\n"
+     ]
+    }
+   ],
    "source": [
     "with FileOut(\"test.txt\") as file_manager:\n",
     "    print(\n",
@@ -351,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +410,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -394,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
