Did Task1 from Lesson6

--- a/lessons/sem_01/lesson_06/practice.ipynb
+++ b/lessons/sem_01/lesson_06/practice.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +49,18 @@
     "def api_computable_exceptions(\n",
     "    exception_mapping: dict[type[Exception], type[Exception]]\n",
     ") -> Callable[[T], T]:\n",
-    "    # ваш код\n",
-    "    pass"
+    "    def decorator(func):\n",
+    "        @wraps(func)\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            try:\n",
+    "                return func(*args, **kwargs)\n",
+    "            except Exception as e:\n",
+    "                if type(e) in exception_mapping:\n",
+    "                    raise exception_mapping[type(e)] from None\n",
+    "                else:\n",
+    "                    raise e\n",
+    "        return wrapper\n",
+    "    return decorator"
    ]
   },
   {
@@ -62,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +340,7 @@
     "\n",
     "    def __exit__(self, exc_type, exc_val, exc_tb) -> None:\n",
     "        sys.stdout = self.stdout\n",
-    "        self.file.close()\n",
+    "        self.file.close() if self.file else None\n",
     "        if exc_type:\n",
     "            raise\n",
     "\n",
@@ -357,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
