Did Task2 from Lesson6

--- a/lessons/sem_01/lesson_06/practice.ipynb
+++ b/lessons/sem_01/lesson_06/practice.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,21 +230,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Precision:\n",
+    "    precision: int\n",
+    "    prec_curr: int\n",
+    " \n",
     "    def __init__(self, precision: int) -> None:\n",
-    "        # ваш код\n",
-    "        pass"
+    "        try:\n",
+    "            self.precision = int(round(precision))\n",
+    "        except:\n",
+    "            raise TypeError(\"Should be a real number\")\n",
+    "        if round(precision) < 1:\n",
+    "            raise ValueError(\"Precision should be equal or more than 1\")\n",
+    "        self.prec_curr = getcontext().prec\n",
+    "\n",
+    "    def __enter__(self):\n",
+    "        getcontext().prec = self.precision\n",
+    "        return self\n",
+    "\n",
+    "    def __exit__(self, exc_type, exc_val, exc_tb):\n",
+    "        getcontext().prec = self.prec_curr\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.33333\n"
+     ]
+    }
+   ],
    "source": [
     "precision = 5\n",
     "\n",
