--- a/lessons/sem_01/lesson_06/practice.ipynb
+++ b/lessons/sem_01/lesson_06/practice.ipynb
@@ -230,34 +230,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Precision:\n",
-    "    precision: int\n",
-    "    prec_curr: int\n",
+    "    _precision: int\n",
+    "    _prec_curr: int\n",
     " \n",
     "    def __init__(self, precision: int) -> None:\n",
     "        try:\n",
-    "            self.precision = int(round(precision))\n",
+    "            self._precision = int(round(precision))\n",
     "        except:\n",
     "            raise TypeError(\"Should be a real number\")\n",
     "        if round(precision) < 1:\n",
     "            raise ValueError(\"Precision should be equal or more than 1\")\n",
-    "        self.prec_curr = getcontext().prec\n",
+    "        self._prec_curr = getcontext().prec\n",
     "\n",
     "    def __enter__(self):\n",
-    "        getcontext().prec = self.precision\n",
+    "        getcontext().prec = self._precision\n",
     "        return self\n",
     "\n",
     "    def __exit__(self, exc_type, exc_val, exc_tb):\n",
-    "        getcontext().prec = self.prec_curr\n"
+    "        getcontext().prec = self._prec_curr\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,8 +350,10 @@
     "\n",
     "        if isinstance(mode, FileOutModes):\n",
     "            self._mode = mode.value\n",
+    "        elif mode in (\"a\", \"w\"):\n",
+    "            self._mode = mode\n",
     "        else:\n",
-    "            raise ValueError(\"Invalid mode.\")\n",
+    "            raise ValueError(\"Invalid mode. Should be 'r' or 'w'.\")\n",
     "    \n",
     "        self.path_to_file = path_to_file\n",
     "\n",
@@ -375,7 +377,7 @@
     "    def mode(self, mode_new: Union[str, FileOutModes]) -> None:\n",
     "        if isinstance(mode_new, FileOutModes):\n",
     "            self._mode = mode_new.value\n",
-    "        elif isinstance(mode_new, str) and mode_new in (\"a\", \"w\"):\n",
+    "        elif mode_new in (\"a\", \"w\"):\n",
     "            self._mode = mode_new\n",
     "        else:\n",
     "            raise ValueError(\"Invalid mode. Should be 'r' or 'w'.\")"
@@ -390,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,6 +438,20 @@
     "except ValueError:\n",
     "    pass\n",
     "\n",
+    "else:\n",
+    "    assert False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    file_manager.mode = 'jaja'\n",
+    "except ValueError:\n",
+    "    pass\n",
     "else:\n",
     "    assert False"
    ]
