--- a/lessons/sem_01/lesson_10/practice.ipynb
+++ b/lessons/sem_01/lesson_10/practice.ipynb
@@ -49,11 +49,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ваш код"
+    "from numbers import Real\n",
+    "from typing import Generator\n",
+    "\n",
+    "def range_float(*, stop: Real, start: Real = 0, step: Real = 1) -> Generator:\n",
+    "    if not (isinstance(start, Real) and isinstance(stop, Real) and isinstance(step, Real)):\n",
+    "        raise TypeError(\"Arguments should be real numbers\")\n",
+    "\n",
+    "    if (step == 0):\n",
+    "        raise ValueError(\"Argument 'step' cannot be zero\")\n",
+    "\n",
+    "    if ((stop-start) * step) < 0:\n",
+    "        return (x for x in []) # Empty Generator\n",
+    "\n",
+    "    iteration = 1\n",
+    "    value = start\n",
+    "    while abs(stop - value) >= abs(step):\n",
+    "        yield value\n",
+    "        value += step * iteration\n"
    ]
   },
   {
@@ -97,11 +114,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ваш код"
+    "from typing import Generator, Callable, Iterable\n",
+    "\n",
+    "def mapper(f: Callable, *args: Iterable, policy: str = \"short\", fillvalue = None) -> Generator:\n",
+    "    if not isinstance(f, Callable):\n",
+    "        raise TypeError(\n",
+    "           \"First given argument should be callable, after – iterable\\n\\\n",
+    "           Policy - \\\"short\\\" or \\\"long\\\", fillvalue - any.\"\n",
+    "        )\n",
+    "\n",
+    "    match policy:\n",
+    "        case \"short\":\n",
+    "            for elem in zip(*args):\n",
+    "                yield f(*elem)\n",
+    "\n",
+    "        case \"long\":\n",
+    "            if isinstance(fillvalue, Iterable):\n",
+    "                fillvalue = list(fillvalue)\n",
+    "\n",
+    "            list_of_iterables = [list(iterable) for iterable in [*args]]\n",
+    "            needed_length = max([len(i) for i in list_of_iterables])\n",
+    "\n",
+    "            for i in range(len(list_of_iterables)):\n",
+    "                while len(list_of_iterables[i]) < needed_length:\n",
+    "                    if not isinstance(fillvalue, Iterable) or len(fillvalue) != len([*args]):\n",
+    "                        list_of_iterables[i].append(fillvalue)\n",
+    "                    else:\n",
+    "                        list_of_iterables[i].append(fillvalue[i])\n",
+    "\n",
+    "            for elem in zip(*list_of_iterables):\n",
+    "                yield f(*elem)\n",
+    "\n",
+    "        case _:\n",
+    "            raise ValueError(\"Parameter 'policy' should be \\\"short\\\" or \\\"long\\\".\")\n"
    ]
   },
   {
@@ -178,11 +227,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ваш код"
+    "from typing import Generator, Iterable\n",
+    "\n",
+    "def circle(object: Iterable) -> Generator:\n",
+    "    if not isinstance(object, Iterable):\n",
+    "        raise TypeError(\"Iterable object expected\")\n",
+    "\n",
+    "    if isinstance(object, Generator):\n",
+    "        store = list()\n",
+    "        for thing in object:\n",
+    "            yield thing\n",
+    "            store.append(thing)\n",
+    "    else:\n",
+    "        store = object\n",
+    "\n",
+    "    if not store:\n",
+    "        raise ValueError(\"Input iterable object is empty\")\n",
+    "\n",
+    "    while True:\n",
+    "        for thing in store:\n",
+    "            yield thing\n"
    ]
   }
  ],
@@ -202,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
