Commit last homeworks with tests

--- a/lessons/sem_02/lesson_03/numpy_operations.ipynb
+++ b/lessons/sem_02/lesson_03/numpy_operations.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,13 +483,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_mutual_distances_vectorized(points: np.ndarray) -> np.ndarray:\n",
-    "    # код преподавателя\n",
-    "    return np.array([], dtype=points.dtype)"
+    "    points = points[np.newaxis, :]\n",
+    "    result = abs(np.transpose(points) - points)\n",
+    "    return np.array(result, dtype=points.dtype)"
    ]
   },
   {
@@ -501,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,18 +583,28 @@
     "    distances: np.ndarray,\n",
     "    angles: np.ndarray,\n",
     ") -> tuple[np.ndarray, np.ndarray]:\n",
-    "    # код преподавателя\n",
+    "    \n",
+    "    if distances.size != angles.size:\n",
+    "        raise ShapeMismatchError()\n",
     "\n",
-    "    return distances, angles\n",
+    "    abscissa = distances * np.cos(angles)\n",
+    "    ordinates = distances * np.sin(angles)\n",
+    "\n",
+    "    return abscissa, ordinates\n",
     "\n",
     "\n",
     "def convert_to_polar(\n",
     "    abscissa: np.ndarray,\n",
     "    ordinates: np.ndarray,\n",
     ") -> tuple[np.ndarray, np.ndarray]:\n",
-    "    # код преподавателя\n",
+    "    \n",
+    "    if abscissa.size != ordinates.size:\n",
+    "        raise ShapeMismatchError()\n",
     "\n",
-    "    return abscissa, ordinates"
+    "    distances = np.sqrt(abscissa**2 + ordinates**2)\n",
+    "    angles = np.arctan2(ordinates, abscissa)\n",
+    "\n",
+    "    return distances, angles"
    ]
   },
   {
@@ -605,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,17 +682,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msum_arrays_vectorized\u001b[39m(\n\u001b[1;32m----> 2\u001b[0m     lhs: \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mndarray,\n\u001b[0;32m      3\u001b[0m     rhs: np\u001b[38;5;241m.\u001b[39mndarray,\n\u001b[0;32m      4\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m np\u001b[38;5;241m.\u001b[39mndarray:\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m lhs\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;241m!=\u001b[39m rhs\u001b[38;5;241m.\u001b[39mshape:\n\u001b[0;32m      6\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m ShapeMismatchError\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def sum_arrays_vectorized(\n",
     "    lhs: np.ndarray,\n",
     "    rhs: np.ndarray,\n",
     ") -> np.ndarray:\n",
-    "    # ваш код\n",
+    "    if lhs.shape != rhs.shape:\n",
+    "        raise ShapeMismatchError\n",
     "\n",
-    "    return np.array([])"
+    "    return lhs + rhs"
    ]
   },
   {
@@ -720,14 +744,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_poly_vectorized(abscissa: np.ndarray) -> np.ndarray:\n",
-    "    # ваш код\n",
-    "\n",
-    "    return abscissa"
+    "    return 3*(abscissa**2) + 2*abscissa + 1"
    ]
   },
   {
@@ -784,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,9 +814,9 @@
     "    lhs: np.ndarray,\n",
     "    rhs: np.ndarray,\n",
     ") -> np.ndarray:\n",
-    "    # ваш код\n",
-    "\n",
-    "    return np.zeros(shape=(lhs.shape[0], rhs.shape[0]))"
+    "    if len(lhs[0]) != len(rhs[0]):\n",
+    "        raise ShapeMismatchError\n",
+    "    return np.sqrt(np.sum((lhs[:, np.newaxis] - rhs)**2, axis=2))"
    ]
   },
   {
@@ -841,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,9 +872,10 @@
     "    azimuth: np.ndarray,\n",
     "    inclination: np.ndarray,\n",
     ") -> tuple[np.ndarray, np.ndarray, np.ndarray]:\n",
-    "    # ваш код\n",
-    "\n",
-    "    return distances, azimuth, inclination\n",
+    "    abscissa = distances * np.sin(inclination) * np.cos(azimuth)\n",
+    "    ordinates = distances * np.sin(inclination) * np.sin(azimuth)\n",
+    "    applicates = distances * np.cos(inclination)\n",
+    "    return abscissa, ordinates, applicates\n",
     "\n",
     "\n",
     "def convert_to_sphere(\n",
@@ -860,9 +883,11 @@
     "    ordinates: np.ndarray,\n",
     "    applicates: np.ndarray,\n",
     ") -> tuple[np.ndarray, np.ndarray, np.ndarray]:\n",
-    "    # ваш код\n",
+    "    azimuth = np.arctan2(ordinates / abscissa)\n",
+    "    distances = (abscissa**2 + ordinates**2 + applicates**2)**0.5\n",
+    "    inclination = np.arccos(applicates / distances)\n",
     "\n",
-    "    return abscissa, ordinates, applicates"
+    "    return distances, azimuth, inclination"
    ]
   },
   {
@@ -897,9 +922,10 @@
     "def get_extremum_indices(\n",
     "    ordinates: np.ndarray,\n",
     ") -> tuple[np.ndarray, np.ndarray]:\n",
-    "    # ваш код\n",
+    "    min_indices = np.where((ordinates[1:-1] < ordinates[:-2]) & (ordinates[1:-1] < ordinates[2:]))[0] + 1\n",
+    "    max_indices = np.where((ordinates[1:-1] > ordinates[:-2]) & (ordinates[1:-1] > ordinates[2:]))[0] + 1\n",
     "\n",
-    "    return ordinates, ordinates"
+    "    return min_indices, max_indices"
    ]
   },
   {
@@ -935,7 +961,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -949,7 +975,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
